# Embedded_Linux

./: README.md  bashrcbashscript  bashscript  bashscript_day5
Emb_Linux1/Dynamiclib/: subtract.c
Emb_Linux1/staticlib/: add.c  divide.c  main.c  modulus.c  multiply.c
Emb_Linux1/staticlib/Includes/: modulus.h  multiply.h  subtract.h
Emb_Linux4/DIO_Project/: main.c  main.elf  main.hex
Emb_Linux4/DIO_Project/LIb/: Std_Types.h
Emb_Linux4/DIO_Project/MCAL/: DIO.c  DIO.h  DIO_REG.h
Emb_Linux5/: CMakeLists.txt
Emb_Linux5/Includes/: add.h  divide.h
Emb_Linux5/Libs/: CMakeLists.txt  add.c  divide.c  modulus.c  multiply.c  subtract.c
Exam_bashscript/: backup_script.sh
Task-2/Q1/: Binary_search.c  Binary_search_output
Task-2/Q2/: Day2.odt
